# wardcat

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  filter_coverage_test.py  live_scan_test.py  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  nightly.yml  publish.yml  real-model-tests.yml
config/: default.yaml
docs/: CNAME  index.md  installation.md  quickstart.md
docs/guide/: configuration.md  extending.md  layers.md  mcp-server.md  security.md
docs/reference/: aiguard.md  internals.md  models.md
docs/stylesheets/: extra.css
examples/: all_layers.py  asgi_middleware.py  batch_and_async.py  demo.py  fastapi_middleware.py  llm_hybrid.py
overrides/partials/: source.html
scripts/: filter_coverage_test.py  live_scan_test.py
src/ai_guard/: __init__.py  __main__.py  _entity_policy.py  entity_groups.py  exceptions.py  guard.py
src/ai_guard/config/: default.yaml  loader.py
src/ai_guard/core/: actions.py  anonymizer.py  engine.py  models.py  registry.py
src/ai_guard/detectors/: base.py  gliner_detector.py  llm_detector.py  ner_detector.py  regex_detector.py
src/ai_guard/integrations/: __init__.py  fastapi.py
src/ai_guard/llm/: model_catalog.py  model_manager.py  prompt.py
src/ai_guard/llm/backends/: base.py  claude.py  ollama.py  openai_compat.py  registry.py  transformers_backend.py
src/ai_guard/ner/: downloader.py  spacy_catalog.py
src/ai_guard/utils/: hashing.py
src/wardcat/: __init__.py  _entity_policy.py  entity_groups.py  exceptions.py  guard.py
src/wardcat/config/: default.yaml  loader.py
src/wardcat/core/: actions.py  anonymizer.py  engine.py  models.py  registry.py
src/wardcat/detectors/: gliner_detector.py  llm_detector.py  ner_detector.py  regex_detector.py
src/wardcat/llm/: model_catalog.py  model_manager.py  prompt.py
src/wardcat/llm/backends/: base.py  ollama.py  openai_compat.py  registry.py  transformers_backend.py  vllm.py
src/wardcat/ner/: downloader.py  spacy_catalog.py
src/wardcat/utils/: hashing.py  normalize.py  text.py
tests/: conftest.py  test_examples.py
tests/benchmark/: eval_harness.py  test_false_positives.py  test_precision_recall.py
tests/integration/: test_adversarial.py  test_claude_backend_pipeline.py  test_complex_scenarios.py  test_config_edge_cases.py  test_full_scan.py  test_llm_integration.py  test_llm_live.py  test_llm_live_claude.py  test_model_setup_flow.py  test_transformers_live.py
tests/unit/: test_action_registry.py  test_address_detector.py  test_adjudication.py  test_async_api.py  test_backend_registry.py  test_builtin_redos.py  test_cli.py  test_config_loader.py  test_configure.py  test_engine_internals.py  test_entity_enum.py  test_entity_groups.py  test_eu_us_uk_entities.py  test_exceptions.py  test_fastapi_middleware.py  test_gliner_detector.py  test_guard.py  test_hashing.py  test_is_sensitive.py  test_layer_warnings.py  test_llm_backends.py  test_llm_detector.py  test_model_catalog.py  test_model_manager_setup.py  test_ner_config.py  test_ner_detector.py  test_normalize.py  test_production_hardening.py  test_propagation.py  test_reapply.py  test_regex_detector.py  test_scan_batch.py  test_spacy_catalog.py  test_spacy_downloader.py  test_special_category.py  test_transformers_backend.py  test_vllm_backend.py
