[project]
name = "ai-guard"
version = "0.2.0b1"
description = "PII detection and anonymization for LLM inputs — regex, NER and on-prem LLM hybrid engine"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "ai-guard contributors" },
]
keywords = [
    "pii", "privacy", "anonymization", "llm", "nlp",
    "data-protection", "gdpr", "regex", "ner", "ollama",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Minimum hard dependencies — kept deliberately small.
# spacy and anthropic are optional (see below).
dependencies = [
    "pyyaml>=6.0,<7",
    "httpx>=0.28.1,<1",
]

[project.optional-dependencies]
# NER-based detection (PERSON, ORG, ADDRESS via SpaCy)
ner = [
    "spacy>=3.7,<4",
]
# HuggingFace Transformers backend (GPU/CPU inference)
transformers = [
    "transformers>=4.40,<5",
    "torch>=2.0",
    "accelerate>=0.26",       # required for device_map="auto"
    "bitsandbytes>=0.43",     # required for 4-bit/8-bit quantization
    "sentencepiece>=0.1.99",  # required for Mistral/Llama tokenizer
    "protobuf>=3.20",         # required for tokenizer serialization
]
# Full install — all optional backends
all = [
    "spacy>=3.7,<4",
    "transformers>=4.40,<5",
    "torch>=2.0",
    "accelerate>=0.26",
    "bitsandbytes>=0.43",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.0",
]

[project.scripts]
ai-guard = "ai_guard.__main__:main"

[project.urls]
"Homepage"    = "https://github.com/oguzhantopcu0/ai-guard"
"Bug Tracker" = "https://github.com/oguzhantopcu0/ai-guard/issues"
"Changelog"   = "https://github.com/oguzhantopcu0/ai-guard/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_guard"]

[tool.hatch.build.targets.wheel.shared-data]
# py.typed and default.yaml are included via packages above — no extra config needed

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
timeout = 30
markers = [
    "ner: Tests requiring SpaCy NER (en_core_web_sm must be installed)",
    "slow: Slow tests requiring a real LLM/model",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.0",
    "spacy>=3.8.0,<4",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
