[project]
name = "wardcat"
version = "0.9.2"
description = "PII detection and anonymization for LLM inputs — regex, NER and on-prem LLM hybrid engine"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Oğuzhan Topçu", email = "oguzhantopcu000@gmail.com" },
]
keywords = [
    "pii", "privacy", "anonymization", "llm", "nlp",
    "data-protection", "gdpr", "regex", "ner", "ollama",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Minimum hard dependencies — kept deliberately small.
# spacy and anthropic are optional (see below).
dependencies = [
    "pyyaml>=6.0,<7",
    "httpx>=0.28.1,<1",
]

[project.optional-dependencies]
# NER-based detection (PERSON, ORG, ADDRESS via SpaCy)
ner = [
    "spacy>=3.8.14,<4",
]
# HuggingFace Transformers backend (GPU/CPU inference)
transformers = [
    "transformers>=5.13.0,<6",
    "torch>=2.12.1",
    "accelerate>=1.14.0",       # required for device_map="auto"
    "bitsandbytes>=0.43",     # required for 4-bit/8-bit quantization
    "sentencepiece>=0.1.99",  # required for Mistral/Llama tokenizer
    "protobuf>=7.35.1",         # required for tokenizer serialization
]
# Full install — all optional backends
all = [
    "spacy>=3.8.14,<4",
    "transformers>=5.13.0,<6",
    "torch>=2.12.1",
    "accelerate>=1.14.0",
    "bitsandbytes>=0.43",
    "sentencepiece>=0.1.99",
    "protobuf>=7.35.1",
]

# Development tooling lives in the PEP 735 [dependency-groups] table below
# (install with `uv sync --dev`), not as a project extra — there is a single
# source of truth for dev dependencies.

[project.urls]
"Homepage"    = "https://github.com/oguzhantopcu0/wardcat"
"Bug Tracker" = "https://github.com/oguzhantopcu0/wardcat/issues"
"Changelog"   = "https://github.com/oguzhantopcu0/wardcat/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wardcat"]

[tool.hatch.build.targets.wheel.shared-data]
# py.typed and default.yaml are included via packages above — no extra config needed

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
timeout = 30
markers = [
    "ner: Tests requiring SpaCy NER (en_core_web_sm must be installed)",
    "slow: Slow tests requiring a real LLM/model",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.0",
    "ruff>=0.15.20",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
    "spacy>=3.8.14,<4",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
# Documentation site (MkDocs + Material + auto API reference from docstrings).
# Build with: uv run --group docs mkdocs build --strict   (preview: mkdocs serve)
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=1.0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, B bugbear, UP pyupgrade, C4 comprehensions
select = ["E", "W", "F", "I", "B", "UP", "C4"]
ignore = [
    "E501",   # line length — handled by the formatter; long regex strings are fine
    "B008",   # function call in default arg — used intentionally (e.g. {} defaults)
    "UP042",  # keep `class Action(str, Enum)` — switching to StrEnum changes str() output
]

[tool.ruff.lint.per-file-ignores]
# Tests deliberately import internals mid-file and assert on broad exceptions.
"tests/**" = ["B011", "E402", "B017"]

[tool.mypy]
python_version = "3.11"
files = ["src/wardcat"]
ignore_missing_imports = true   # spacy/torch/transformers ship no/partial stubs
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
